--- a/scripts/termux-tts-speak.in
+++ b/scripts/termux-tts-speak.in
@@ -3,12 +3,14 @@ set -e -u
 
 SCRIPTNAME=termux-tts-speak
 show_usage () {
-    echo "Usage: $SCRIPTNAME [-e engine] [-l language] [-n region] [-v variant] [-p pitch] [-r rate] [-s stream] [text-to-speak]"
+    echo "Usage: $SCRIPTNAME [-e engine] [-l language] [-n region] [-v variant] [-i voice] [-p pitch] [-r rate] [-s stream] [text-to-speak]"
     echo "Speak text with a system text-to-speech (TTS) engine. The text to speak is either supplied as arguments or read from stdin if no arguments are given."
     echo "  -e engine    TTS engine to use (see termux-tts-engines)"
     echo "  -l language  language to speak in (may be unsupported by the engine)"
     echo "  -n region    region of language to speak in"
     echo "  -v variant   variant of the language to speak in"
+    echo "  -i voice     voice to speak in (see termux-tts-voices),"
+    echo "                 overrides language, region and variant options."
     echo "  -p pitch     pitch to use in speech. 1.0 is the normal pitch,"
     echo "                 lower values lower the tone of the synthesized voice,"
     echo "                 greater values increase it."
@@ -24,7 +26,7 @@ show_usage () {
 
 PARAMS=""
 
-while getopts :he:l:n:v:p:r:s: option
+while getopts :he:l:n:v:i:p:r:s: option
 do
     case "$option" in
         h) show_usage;;
@@ -32,6 +34,7 @@ do
         l) PARAMS="$PARAMS --es language $OPTARG";;
         n) PARAMS="$PARAMS --es region $OPTARG";;
         v) PARAMS="$PARAMS --es variant $OPTARG";;
+        i) PARAMS="$PARAMS --es voice $OPTARG";;
         p) PARAMS="$PARAMS --ef pitch $OPTARG";;
         r) PARAMS="$PARAMS --ef rate $OPTARG";;
         s) PARAMS="$PARAMS --es stream $OPTARG";;
